--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="bio">Dedicated to creating user-centered, responsive, and dynamic web experiences.</p>
 
       <div class="nav">
-        <a href="#" onclick="showSection('about')" class="active">🙋 BOUT</a>
+        <a href="#" onclick="showSection('about')" class="active">🙋 ABOUT</a>
         <a href="#" onclick="showSection('experience')">💼 EXPERIENCE</a>
         <a href="#" onclick="showSection('projects')">🛠️ PROJECTS</a>
         <a href="#" onclick="showSection('education')"> <i class="fas fa-graduation-cap" style="color:#4B9CD3;"></i>
@@ -30,7 +30,7 @@
     <main>
       <section id="about" class="section active">
         <div class="profile-header">
-          <img src="my_image.jpeg" alt="Your Name" class="profile-img">
+          <img src="myimage.jpeg" alt="Your Name" class="profile-img">
           <div class="profile-text">
             <p>
               With a strong interest in web development, I enjoy creating user-friendly and engaging digital
