expereinc para changed

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <h2><i class="fas fa-briefcase"></i> Experience</h2>
 
         <div>
-          <h3> 🧑‍💻 <strong>Front-End Developer – Greensoft Groups</strong></h3>
+          <h3> 🧑‍💻 <strong>Java Developer – Greensoft Groups</strong></h3>
           <p><strong>2024 – Present</strong></p>
-          <p>Currently working as a Front-End Developer, building modern web interfaces.</p>
+          <p>Currently working as a Java Developer, implementing business logic and integrating databases with web applications.</p>
         </div>
 
         <div>
