postion name changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <header class="fixed-header">
       <h1>Viniba Arockia Mary S</h1>
-      <div class="role">Web Developer</div>
+      <div class="role">Java Developer</div>
       <p class="bio">Dedicated to creating user-centered, responsive, and dynamic web experiences.</p>
 
       <div class="nav">
